--- a/IPList/AboutWindow.xib
+++ b/IPList/AboutWindow.xib
@@ -1,20 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="15705" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="15702" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="15705"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="15702"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="AboutWindowController">
             <connections>
                 <outlet property="imgLogo" destination="qmd-1r-bQo" id="LAA-Gq-hBu"/>
+                <outlet property="lblVersion" destination="6LR-OI-rex" id="lAr-aA-ypC"/>
                 <outlet property="txtLicense" destination="VF4-9V-GHj" id="IOl-ic-MxC"/>
                 <outlet property="window" destination="2" id="6"/>
             </connections>
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
-        <customObject id="-3" userLabel="Application"/>
+        <customObject id="-3" userLabel="Application" customClass="NSObject"/>
         <window title="About IPList" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" animationBehavior="default" tabbingMode="disallowed" id="2" customClass="AboutWindow">
             <windowStyleMask key="styleMask" titled="YES" closable="YES"/>
             <rect key="contentRect" x="131" y="74" width="497" height="354"/>
@@ -23,11 +24,6 @@
                 <rect key="frame" x="0.0" y="0.0" width="497" height="354"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="qmd-1r-bQo">
-                        <rect key="frame" x="20" y="215" width="119" height="119"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                        <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" id="ZAQ-LS-7Jy"/>
-                    </imageView>
                     <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="iHe-3T-LRa">
                         <rect key="frame" x="145" y="311" width="149" height="23"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -38,9 +34,9 @@
                         </textFieldCell>
                     </textField>
                     <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="6LR-OI-rex">
-                        <rect key="frame" x="145" y="287" width="72" height="16"/>
+                        <rect key="frame" x="145" y="287" width="118" height="16"/>
                         <autoresizingMask key="autoresizingMask"/>
-                        <textFieldCell key="cell" lineBreakMode="clipping" title="Version 0.0" id="Mzx-td-8xW">
+                        <textFieldCell key="cell" lineBreakMode="clipping" title="Version 0.0 Build 0" id="Mzx-td-8xW">
                             <font key="font" metaFont="system"/>
                             <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                             <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
@@ -74,18 +70,18 @@
                         </textFieldCell>
                     </textField>
                     <scrollView fixedFrame="YES" autohidesScrollers="YES" horizontalLineScroll="10" horizontalPageScroll="10" verticalLineScroll="10" verticalPageScroll="10" hasHorizontalScroller="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TL2-ec-A95">
-                        <rect key="frame" x="20" y="20" width="457" height="187"/>
+                        <rect key="frame" x="20" y="20" width="457" height="181"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <clipView key="contentView" ambiguous="YES" drawsBackground="NO" copiesOnScroll="NO" id="uAF-y9-kdv">
-                            <rect key="frame" x="1" y="1" width="455" height="185"/>
+                            <rect key="frame" x="1" y="1" width="455" height="179"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             <subviews>
                                 <textView ambiguous="YES" editable="NO" importsGraphics="NO" richText="NO" verticallyResizable="YES" spellingCorrection="YES" smartInsertDelete="YES" id="VF4-9V-GHj">
-                                    <rect key="frame" x="0.0" y="0.0" width="455" height="185"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="455" height="179"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
                                     <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
-                                    <size key="minSize" width="455" height="185"/>
+                                    <size key="minSize" width="455" height="179"/>
                                     <size key="maxSize" width="457" height="10000000"/>
                                     <color key="insertionPointColor" name="textColor" catalog="System" colorSpace="catalog"/>
                                 </textView>
@@ -96,10 +92,15 @@
                             <autoresizingMask key="autoresizingMask"/>
                         </scroller>
                         <scroller key="verticalScroller" hidden="YES" wantsLayer="YES" verticalHuggingPriority="750" horizontal="NO" id="GmM-L5-Gtv">
-                            <rect key="frame" x="440" y="1" width="16" height="185"/>
+                            <rect key="frame" x="440" y="1" width="16" height="179"/>
                             <autoresizingMask key="autoresizingMask"/>
                         </scroller>
                     </scrollView>
+                    <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="qmd-1r-bQo">
+                        <rect key="frame" x="25" y="220" width="108" height="108"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                        <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" id="ZAQ-LS-7Jy"/>
+                    </imageView>
                 </subviews>
             </view>
             <point key="canvasLocation" x="85.5" y="147"/>
