--- a/IPList/AboutWindow.xib
+++ b/IPList/AboutWindow.xib
@@ -18,15 +18,15 @@
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
         <window title="About IPList" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" animationBehavior="default" tabbingMode="disallowed" id="2" customClass="AboutWindow">
             <windowStyleMask key="styleMask" titled="YES" closable="YES"/>
-            <rect key="contentRect" x="131" y="74" width="497" height="354"/>
+            <rect key="contentRect" x="131" y="74" width="497" height="420"/>
             <rect key="screenRect" x="0.0" y="0.0" width="1920" height="1200"/>
             <view key="contentView" id="3">
-                <rect key="frame" x="0.0" y="0.0" width="497" height="354"/>
+                <rect key="frame" x="0.0" y="0.0" width="497" height="420"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="iHe-3T-LRa">
-                        <rect key="frame" x="145" y="311" width="149" height="23"/>
-                        <autoresizingMask key="autoresizingMask"/>
+                        <rect key="frame" x="145" y="377" width="149" height="23"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                         <textFieldCell key="cell" lineBreakMode="clipping" title="IPList for macOS" id="WjW-P2-HeL">
                             <font key="font" metaFont="system" size="20"/>
                             <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
@@ -34,8 +34,8 @@
                         </textFieldCell>
                     </textField>
                     <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="6LR-OI-rex">
-                        <rect key="frame" x="145" y="287" width="118" height="16"/>
-                        <autoresizingMask key="autoresizingMask"/>
+                        <rect key="frame" x="145" y="353" width="149" height="16"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                         <textFieldCell key="cell" lineBreakMode="clipping" title="Version 0.0 Build 0" id="Mzx-td-8xW">
                             <font key="font" metaFont="system"/>
                             <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
@@ -43,8 +43,8 @@
                         </textFieldCell>
                     </textField>
                     <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Pcg-pT-2Vc">
-                        <rect key="frame" x="145" y="263" width="195" height="16"/>
-                        <autoresizingMask key="autoresizingMask"/>
+                        <rect key="frame" x="145" y="329" width="195" height="16"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                         <textFieldCell key="cell" lineBreakMode="clipping" title="Copyright 2020 Michael Cherry" id="nC5-sO-kdv">
                             <font key="font" metaFont="system"/>
                             <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
@@ -52,8 +52,8 @@
                         </textFieldCell>
                     </textField>
                     <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="D42-u6-bW8">
-                        <rect key="frame" x="145" y="239" width="244" height="16"/>
-                        <autoresizingMask key="autoresizingMask"/>
+                        <rect key="frame" x="145" y="305" width="244" height="16"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                         <textFieldCell key="cell" lineBreakMode="clipping" title="A product of Independent Technologies" id="CXn-W2-k8J">
                             <font key="font" metaFont="system"/>
                             <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
@@ -61,8 +61,8 @@
                         </textFieldCell>
                     </textField>
                     <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="1nU-a0-1Yn">
-                        <rect key="frame" x="145" y="215" width="334" height="16"/>
-                        <autoresizingMask key="autoresizingMask"/>
+                        <rect key="frame" x="145" y="281" width="334" height="16"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                         <textFieldCell key="cell" lineBreakMode="clipping" title="Licensed under the BSD 2-Clause &quot;Simplified&quot; License" id="TvV-qm-vU0">
                             <font key="font" metaFont="system"/>
                             <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
@@ -70,18 +70,18 @@
                         </textFieldCell>
                     </textField>
                     <scrollView fixedFrame="YES" autohidesScrollers="YES" horizontalLineScroll="10" horizontalPageScroll="10" verticalLineScroll="10" verticalPageScroll="10" hasHorizontalScroller="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TL2-ec-A95">
-                        <rect key="frame" x="20" y="20" width="457" height="181"/>
-                        <autoresizingMask key="autoresizingMask"/>
+                        <rect key="frame" x="20" y="20" width="457" height="247"/>
+                        <autoresizingMask key="autoresizingMask" heightSizable="YES"/>
                         <clipView key="contentView" ambiguous="YES" drawsBackground="NO" copiesOnScroll="NO" id="uAF-y9-kdv">
-                            <rect key="frame" x="1" y="1" width="455" height="179"/>
+                            <rect key="frame" x="1" y="1" width="455" height="245"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             <subviews>
                                 <textView ambiguous="YES" editable="NO" importsGraphics="NO" richText="NO" verticallyResizable="YES" spellingCorrection="YES" smartInsertDelete="YES" id="VF4-9V-GHj">
-                                    <rect key="frame" x="0.0" y="0.0" width="455" height="179"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="455" height="245"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
                                     <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
-                                    <size key="minSize" width="455" height="179"/>
+                                    <size key="minSize" width="455" height="245"/>
                                     <size key="maxSize" width="457" height="10000000"/>
                                     <color key="insertionPointColor" name="textColor" catalog="System" colorSpace="catalog"/>
                                 </textView>
@@ -92,18 +92,18 @@
                             <autoresizingMask key="autoresizingMask"/>
                         </scroller>
                         <scroller key="verticalScroller" hidden="YES" wantsLayer="YES" verticalHuggingPriority="750" horizontal="NO" id="GmM-L5-Gtv">
-                            <rect key="frame" x="440" y="1" width="16" height="179"/>
+                            <rect key="frame" x="440" y="1" width="16" height="244"/>
                             <autoresizingMask key="autoresizingMask"/>
                         </scroller>
                     </scrollView>
                     <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="qmd-1r-bQo">
-                        <rect key="frame" x="25" y="220" width="108" height="108"/>
+                        <rect key="frame" x="25" y="286" width="108" height="108"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                         <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" id="ZAQ-LS-7Jy"/>
                     </imageView>
                 </subviews>
             </view>
-            <point key="canvasLocation" x="85.5" y="147"/>
+            <point key="canvasLocation" x="85.5" y="180"/>
         </window>
     </objects>
 </document>
